# build_system_tools

./: .gitignore  main.cpp  main_shared.x  main_static.x  meson.build  pkg-config_files.md
.basic_lib_ref/include/: mult.hpp
basic_lib/: meson.build
basic_lib/src/: meson.build
cool_lib/: meson.build
cool_lib/include/: max_vec.hpp  min_vec.hpp  strange_mult.hpp  strange_sum.hpp
cool_lib/src/: max_vec.cpp  meson.build  min_vec.cpp
my_lib/include/: sum.hpp
my_lib/src/: sum.cpp
my_lib_meson/src/: mult.cpp
